crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__rsa_2048_pem_shape.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: result
---
label: snapshot-rsa-2048
bits: 2048
private_pem_starts_with: "-----BEGIN PRIVATE KEY-----"
private_pem_ends_with: "-----END PRIVATE KEY-----"
private_pem_line_count: 28
public_pem_starts_with: "-----BEGIN PUBLIC KEY-----"
public_pem_ends_with: "-----END PUBLIC KEY-----"
public_pem_line_count: 9
private_der_len: 1217
public_der_len: 294
