crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__rsa_2048_private_pem_shape.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: shape
---
first_line: "-----BEGIN PRIVATE KEY-----"
last_line: "-----END PRIVATE KEY-----"
line_count: 28
total_len: 1704
