crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__rsa_2048_public_pem_shape.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: shape
---
first_line: "-----BEGIN PUBLIC KEY-----"
last_line: "-----END PUBLIC KEY-----"
line_count: 9
total_len: 451
