crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__rsa_4096_pem_shape.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: result
---
label: snapshot-rsa-4096
bits: 4096
private_pem_starts_with: "-----BEGIN PRIVATE KEY-----"
private_pem_ends_with: "-----END PRIVATE KEY-----"
private_pem_line_count: 52
public_pem_starts_with: "-----BEGIN PUBLIC KEY-----"
public_pem_ends_with: "-----END PUBLIC KEY-----"
public_pem_line_count: 14
private_der_len: 2374
public_der_len: 550
