crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__rsa_der_lengths.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: cases
---
- algorithm: RSA-2048
  private_key_der_len: 1217
  public_key_der_len: 294
- algorithm: RSA-4096
  private_key_der_len: 2375
  public_key_der_len: 550
