crates/uselesskey-rsa/tests/snapshots/snapshots_rsa__rsa_key_sizes.snap
---
source: crates/uselesskey-rsa/tests/snapshots_rsa.rs
expression: sizes
---
- bits: 2048
  private_der_len: 1218
  public_der_len: 294
- bits: 4096
  private_der_len: 2375
  public_der_len: 550
